# jana-plugin-example

./: CMakeLists.txt  License.txt  README.md
src/: CMakeLists.txt  hit.h  random_source.cc  random_source.h  sample_plugin.cc  shower.h  shower_factory.cc  shower_factory.h  stdout_processor.cc  stdout_processor.h
tests/: CMakeLists.txt  integration_tests.cc  random_source_tests.cc  shower_factory_tests.cc  tests_main.cc
